--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.115.4",
     "pydantic-settings>=2.6.0",
+    "sqlmodel>=0.0.22",
     "uvicorn>=0.32.0",
 ]
 
