--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "clerk-backend-api>=1.1.2",
     "fastapi>=0.115.4",
     "pydantic-settings>=2.6.0",
+    "pyjwt>=2.9.0",
     "sqlmodel>=0.0.22",
     "uvicorn>=0.32.0",
 ]
