--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
 
 [tool.uv]
 dev-dependencies = [
+    "faker>=30.8.2",
     "httpx>=0.27.2",
     "pytest>=8.3.3",
     "rust>=1.3.1",
