--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ dependencies = [
     "fastapi>=0.115.4",
     "pydantic-settings>=2.6.0",
     "pyjwt>=2.9.0",
+    "python-magic>=0.4.27",
+    "python-multipart>=0.0.17",
     "sqlmodel>=0.0.22",
     "uvicorn>=0.32.0",
 ]
@@ -17,6 +19,7 @@ dependencies = [
 dev-dependencies = [
     "faker>=30.8.2",
     "httpx>=0.27.2",
+    "pytest-mock>=3.14.0",
     "pytest>=8.3.3",
     "rust>=1.3.1",
 ]
